<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mid_night"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <EditText
            android:id="@+id/email2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />

        <EditText
            android:id="@+id/realname2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="Enter your Real Name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />


        <EditText
            android:id="@+id/sq2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="Question to constraint who can view your profile"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />

        <EditText
            android:id="@+id/sa2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="Enter the answer to your question"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />

        <EditText
            android:id="@+id/about2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/pearl"
            android:hint="Say something about yourself"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btnChange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/khaki_rose"
            android:text="@string/btn_register"
            android:textColor="@color/fire_brick" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToHome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="Go back!"
            android:textAllCaps="false"
            android:textColor="@color/fire_brick"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
